# Gaviota

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
gaviota/: gaviota.cpp  gaviota.h
gaviota/core/:  core.h  application.cpp  application.h  log.h
gaviota/core/managers/: log_manager.cpp  log_manager.h
gaviota/events/: event.h
